<resources>
    <string name="app_name">SCHOWL</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_test">Test</string>
    <string name="menu_subjects">Subjects</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="ask_a_question">Ask a question</string>
    <string name="write_solution">Write a solution</string>

    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="start_test">Start test</string>

    <string name="select_subject">SELECT SUBJECT</string>
    <string name="select_category">SELECT CATEGORY</string>
    <string name="min_difficulty">Minimal difficulty: </string>
    <string name="max_difficulty">Maximal difficulty: </string>

    <string name="show_solution">  SHOW SOLUTION  </string>
    <string name="next">NEXT</string>
    <string name="how_difficult">Was it hard?</string>
</resources>
