<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
                android:id="@+id/nav_test"
                android:icon="@drawable/icon_experiment"
                android:title="@string/menu_test"/>
        <item
                android:id="@+id/nav_Subjects"
                android:icon="@drawable/icon_subject"
                android:title="@string/menu_subjects"/>
    </group>

    <item android:title="General">
        <menu>
            <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/icon_settings"
                    android:title="@string/menu_settings"/>
            <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/icon_about"
                    android:title="@string/menu_about"/>
        </menu>
    </item>

</menu>
