<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/create_test_app_bar"
        tools:context=".MainActivity" android:id="@+id/constraintLayout">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/LytSelectSubject"
            app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/LytSelectCategory">

        <TextView
                android:text="@string/select_subject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LblSubject"
                android:textSize="30sp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/SpnSubject" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
        <Spinner
                android:layout_width="255dp"
                android:layout_height="62dp" android:id="@+id/SpnSubject"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                app:layout_constraintTop_toBottomOf="@+id/LblSubject"
                app:layout_constraintBottom_toTopOf="@+id/SwitchAll" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
        <Switch
                android:text="All  "
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/SwitchAll"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/SpnSubject"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/LytSelectCategory"
            app:layout_constraintTop_toBottomOf="@+id/LytSelectSubject"
            app:layout_constraintBottom_toTopOf="@+id/LytSetDifficulty">

        <TextView
                android:text="@string/select_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LblCategory"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/spinner2" android:textSize="30sp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
        <Spinner
                android:layout_width="255dp"
                android:layout_height="62dp" android:id="@+id/spinner2"
                style="@style/Widget.AppCompat.Spinner.Underlined"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/LblCategory"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" android:id="@+id/LytSetDifficulty" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/LytSelectCategory" app:layout_constraintBottom_toBottomOf="parent"
            tools:layout_editor_absoluteX="-244dp">

        <TextView
                android:text="@string/min_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/LblMinDif"
                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toTopOf="@+id/SkbMaxDif"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginLeft="8dp" android:layout_marginStart="8dp"/>
        <SeekBar
                android:layout_width="210dp"
                android:layout_height="13dp"
                android:id="@+id/SkbMinDif" android:max="10"
                style="@android:style/Widget.Material.SeekBar.Discrete" android:progress="8"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/LblMaxDif" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/max_difficulty"
                android:layout_width="wrap_content"
                android:layout_height="15dp"
                android:id="@+id/LblMaxDif"
                app:layout_constraintTop_toBottomOf="@+id/SkbMaxDif"
                app:layout_constraintBottom_toTopOf="@+id/SkbMinDif" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
        <SeekBar
                android:layout_width="210dp"
                android:layout_height="20dp"
                android:id="@+id/SkbMaxDif" android:max="10"
                style="@android:style/Widget.Material.SeekBar.Discrete" android:progress="3"
                app:layout_constraintTop_toBottomOf="@+id/LblMinDif"
                app:layout_constraintBottom_toTopOf="@+id/LblMaxDif" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginLeft="8dp"
                android:layout_marginStart="8dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>